# eventsystem

./: CMakeLists.txt  LICENSE  README.md  cmake.sh
inc/engine/events/: Blocking_forwarder.hpp  Broadcaster.hpp  Detaching_forwarder.hpp  Filter_node.hpp  Lambda_receiver.hpp  Receiver_forwarder.hpp
inc/engine/events/interfaces/: Forwarder.h  Node.h  Receiver.h  Redirectable.h  Subscribable.h
inc/engine/types/: Dict.h  Dict.hpp  Dynamic_union.hpp  Index_node.hpp  Type_descriptions.hpp
src/: CMakeLists.txt
src/engine/types/: Dict.cpp
tests/: CMakeLists.txt
tests/engine/events/: Blocking_forwarder.cpp  Broadcaster.cpp  Detaching_forwarder.cpp  Filter_node.cpp  Lambda_receiver.cpp  Receiver_forwarder.cpp  Test_receiver.hpp
tests/engine/types/: Dict.cpp  Dynamic_union.cpp  Dynamic_union_link.cpp  Index_node.cpp
